test/negative/initially01.cfr
// Test for negative initially constraint

a
 b ?
  c ?
  d ?
  e ?
  [initially ]


